removed # from <a href="" class="navbar-brand">
<a href="" class="navbar-brand">WaT's tHe DaY 2dAy</a> removed # to allow the same page to reload on click

--- a/watstheday2daybootstrap/src/main/webapp/index2.html
+++ b/watstheday2daybootstrap/src/main/webapp/index2.html
@@ -21,7 +21,7 @@ body {
 <body style="background-color: #6cbd562e;">
 
 	<nav class="navbar navbar-light bg-light navbar-expand-lg static-top">
-		<a href="#" class="navbar-brand">WaT's tHe DaY 2dAy</a>
+		<a href="" class="navbar-brand">WaT's tHe DaY 2dAy</a>
 		<button class="navbar-toggler" data-toggle="collapse"
 			data-target="#navbarCollapse">
 			<span class="navbar-toggler-icon"></span>
